Mon Nov 03 15:40:36 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Fixed an image name in a menu.

Mon Nov 03 14:53:27 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimMainWindow.cpp:
	  - Fixed the order of core and UI initialization, so that signals in
	    QGaimBListWindow won't have problems.

Mon Nov 03 10:59:17 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Fix icons in the preferences dialog.

Mon Nov 03 10:40:15 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	* gaim.pro:
	  - Added 32x32 images for larger resolutions.

Mon Nov 03 08:30:17 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimMainWindow.cpp:
	  - Toolbar buttons are 32x32 on larger screens.

Mon Nov 03 00:46:06 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - Reduce the delay for the pop-up menu on the conversations button
	    to 250ms.

Mon Nov 03 00:36:53 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsBox.cpp:
	* src/QGaimAccountsBox.h:
	  - Our algorithm for truncating overly long account usernames in
	    the account combobox is now much smarter.

Sun Nov 02 17:06:14 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	  - Idle times are now aligned on the far right of the buddy list
	    on all resolutions.

Sun Nov 02 16:53:09 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	  - Small code tweak to turn 4 lines into 1.

Thu Oct 23 21:12:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - The Join Chat button actually works right now.